Fix Alignment of Text and Icon in permission card header

--- a/src/amo/components/PermissionsCard/styles.scss
+++ b/src/amo/components/PermissionsCard/styles.scss
@@ -8,7 +8,7 @@
 
 .PermissionsCard-learn-more {
   .Icon {
-    @include margin-start(12px);
+    @include margin-start(5px);
   }
 }
 
